--- a/docker-images/python-base/Dockerfile
+++ b/docker-images/python-base/Dockerfile
@@ -1,8 +1,5 @@
 FROM python:3.10-slim
-
 WORKDIR /app
-
 COPY runner.py .
 
-CMD ["python", "runner.py"]
- 
+CMD ["python", "runner.py", "/app/usercode"]
